<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mind Shrper</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="title_activity_mode">ModeActivity</string>
    <string name="PLAY">PLAY</string>
    <string name="INSTRUCTION">INSTRUCTION</string>
    <string name="EXIT">EXIT</string>
    <string name="EASY">EASY</string>
    <string name="MEDIUM">MEDIUM</string>
    <string name="HARD">HARD</string>
    <string name="title_activity_level">LevelActivity</string>
    <string name="title_activity_instruction">Instruction</string>
    <string name="title_activity_easy">EasyActivity</string>
    <string name="title_activity_medium">MediumActivity</string>
    <string name="title_activity_hard">HardActivity</string>
    <string name="title_activity_easy__select">Easy_SelectActivity</string>
    <string name="title_activity_score">High Score</string>
    <string name="title_activity_new">NewActivity</string>
    <string name="title_activity_next">NextActivity</string>
    <string name="title_activity_level_2">Level 2</string>
    <string name="title_activity_level2__select">Level2_SelectActivity</string>
    <string name="title_activity_level3">Easy Level 3</string>
    <string name="title_activity_level3_select">Level 3</string>
    <string name="title_activity_level4">Level 4</string>
    <string name="title_activity_level4__select">Level 4</string>
    <string name="title_activity_level5">Level 5</string>
    <string name="title_activity_level5__select">Level 5</string>
    <string name="title_activity_level6">Level 6</string>
    <string name="title_activity_level6__select">Level 6</string>
    <string name="title_activity_level7">Level 7</string>
    <string name="title_activity_level7__select">Level 7</string>
    <string name="title_activity_finish">GameOver</string>

</resources>
