<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/mainmenu"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainMenuActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/vol"
        android:layout_alignLeft="@+id/vol"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:orientation="vertical" >

        <Button
            android:id="@+id/play"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:onClick="play"
            android:text="@string/PLAY"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="italic"
            android:typeface="normal" />

        <Button
            android:id="@+id/inst"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:onClick="inst"
            android:text="@string/INSTRUCTION"
            android:textColor="@android:color/white"
            android:textSize="25sp"
            android:textStyle="italic" />

        <Button
            android:id="@+id/score"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:onClick="score"
            android:text="SCORE"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

        <Button
            android:id="@+id/exit"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:background="@drawable/btn"
            android:onClick="exit"
            android:text="@string/EXIT"
            android:textColor="@android:color/white"
            android:textSize="25sp" />

    </LinearLayout>

    <Button
        android:id="@+id/vol"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/volum"
        android:onClick="stopAudio" />

</RelativeLayout>
